# fastapi_learn

./: README.md  pyproject.toml  run.py
game_blog/: __init__.py  database.py  main.py  run.py  site.db
game_blog/apps/authapp/: form.py  models.py  routes.py  schemas.py
game_blog/apps/mainapp/: routes.py
game_blog/apps/postapp/: models.py
game_blog/apps/postsapp/: models.py
game_blog/core/: config.py  hashing.py  request_framework.py
game_blog/db/: base_class.py  session.py
game_blog/db/repository/: users.py
game_blog/migration/: env.py
game_blog/migration/versions/: a1ae3505b945_.py  f16a07f7d8b1_initial.py
game_blog/static/auth/css/: style.css
