[tool.poetry]
name = "fast-blog"
version = "0.1.0"
description = ""
authors = ["Alexandr <anifan01@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
aiosmtplib = "1.1.6"
aiosqlite = "0.17.0"
aioredis = "2.0.1"
alembic = "1.8.0"
anyio = "3.6.1"
async-timeout = "4.0.2"
authlib = "1.0.1"
blinker = "1.4"
certifi = "2022.6.15"
cffi = "1.15.1"
click = "8.1.3"
cryptography = "37.0.2"
databases = "0.6.0"
deprecated = "1.2.13"
dnspython = "2.2.1"
email-validator = "1.2.1"
fakeredis = "1.8.1"
fastapi = "0.78.0"
fastapi-mail = "1.0.9"
fastapi-utils = "0.2.1"
greenlet = "1.1.2"
h11 = "0.12.0"
httpcore = "0.15.0"
httptools = "0.4.0"
httpx = "0.23.0"
idna = "3.3"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
mako = "1.2.1"
markupsafe = "2.1.1"
packaging = "21.3"
passlib = "1.7.4"
pycparser = "2.21"
pydantic = {version = "1.9.1", extras = ["email"]}
pyparsing = "3.0.9"
python-dotenv = "0.20.0"
python-multipart = "0.0.5"
pyyaml = "6.0"
redis = "4.3.4"
rfc3986 = {version = "1.5.0", extras = ["idna2008"]}
six = "1.16.0"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
sqlalchemy = "1.4.39"
sqlalchemy-utils = "0.38.2"
starlette = "0.19.1"
typing-extensions = "4.3.0"
uvicorn = {version = "0.18.2", extras = ["standard"]}
watchfiles = "0.15.0"
websockets = "10.3"
wrapt = "1.14.1"
bcrypt = "^4.0.1"
uvloop = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
